<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MapYou</string>
    <string name="action_settings">Settings</string>

    <!-- **** String used for Login **** -->
    <string name="login_name">Login</string>
    <string name="nickname_login">nickname</string>
    <string name="password_login">password</string>
    <string name="register_login">Register to MapYou</string>
    <string name="facebook_login">Login with:</string>
    <string name="welcome_mapyou">Welcome to MapYou</string>
    <string name="New_MapMe">New MapMe</string>
    <string name="Send_Partecipation">Send partecipation</string>
    <string name="Request_Partecipation">Request partecipation</string>
    <string name="View_MapMe">Your MapMe</string>
    <string name="Menu">MapYou</string>
    <string name="Home">Home</string>
    <string name="Profile">Profile</string>

    <!-- **** String used for Registration **** -->
    <string name="Register_to_MapYou">Register</string>
    <string name="email">email</string>
    <string name="confirmPass">confirm pass</string>

    <!-- **** String used for Forgot **** -->
    <string name="forgotPass">Forgot pass</string>
    <string name="forgotP">Forgot password</string>

    <!-- **** String used for Menu **** -->


    <!-- **** String Face **** -->
    <string name="appId">1516574998563667</string>

    <!-- **** List of String for Drawer **** -->
    <array name="nav_drawer_icons">
        <item>@drawable/home</item>
        <item>@drawable/profile</item>
        <item>@drawable/rate</item>
        <item>@drawable/help</item>
        <item>@drawable/info</item>
        <item>@drawable/logout</item>
    </array>
    <array name="nav_drawer_items">
        <item>@string/Home</item>
        <item>@string/Profile</item>
        <item>@string/Rate</item>
        <item>@string/Help</item>
        <item>@string/Info</item>
        <item>@string/logout</item>
    </array>

    <!-- **** String Profile **** -->
    <string name="logout">Log out</string>
    <string name="yourprofil">Profile:</string>
    <string name="Rate">Rate</string>
    <string name="Info">About</string>
    <string name="Help">Help</string>
    <string name="mapme_name">Name</string>
    <string name="start_location_mapme_on_gps">Current location</string>
    <string name="start_mapme">MapMe start location</string>
    <string name="end_mapme">MapMe end location</string>
    <string name="view_mapme_on_google_map">View map</string>

</resources>