<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AliceBlue"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="333dp"
        android:layout_height="120dp"
        android:layout_marginBottom="20dp" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text="@string/Menu"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="45sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="115dp"
            android:layout_height="92dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal" >
        

        <Button
            android:id="@+id/button1"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="3dp"
            android:layout_weight="0.28"
            android:background="@color/LightBlue"
            android:text="@string/New_MapMe"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="3dp"
            android:layout_weight="0.22"
            android:background="@color/LightGreen"
            android:text="@string/View_MapMe" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Button02"
            android:layout_width="156dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="4dp"
            android:background="@color/LightGreen"
            android:text="@string/Send_Partecipation"
            android:textSize="19sp" />

        <Button
            android:id="@+id/Button01"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="3dp"
            android:layout_weight="0.22"
            android:background="@color/LightBlue"
            android:text="@string/Request_Partecipation"
            android:textSize="19sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Button03"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0.11"
            android:background="@color/LightBlue"
            android:text="@string/Info"
            android:textSize="19sp" />

        <Button
            android:id="@+id/Button04"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@color/LightGreen"
            android:text="@string/Help"
            android:textSize="19sp" />
    </LinearLayout>

</LinearLayout>
