<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AliceBlue" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.29"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/Menu"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="45sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="95dp"
                android:layout_height="76dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo2" />
        </LinearLayout>

        <EditText
            android:id="@+id/user_registration"
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/LightBlue"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/nickname_login"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/user_password_registration"
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/LightGreen"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password_login"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/userconfirm_password"
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_weight="0.29"
            android:background="@color/LightBlue"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/confirmPass"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_weight="0.29"
            android:background="@color/LightGreen"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress|textPassword" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="89dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:clickable="true"
            android:onClick="register"
            android:src="@drawable/login"
            android:text="Register" />

    </LinearLayout>

</ScrollView>